<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/menu_action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="90"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_action_demo"
        android:title="@string/action_demo"
        android:orderInCategory="91"
        app:showAsAction="never" />

   <item
        android:id="@+id/menu_action_docs"
        android:title="@string/action_documentation"
        android:orderInCategory="92"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_action_about"
        android:title="@string/action_about"
        android:orderInCategory="93"
        app:showAsAction="never" />

</menu>