<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    tools:context="de.peterloos.beziersplines.activities.MainActivity">

    <TableLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:shrinkColumns="0,2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TableRow>

            <Spinner
                android:id="@+id/spinner_editormode"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:entries="@array/editor_modes" />

            <TextView
                android:layout_height="match_parent" />

            <CheckBox
                android:id="@+id/checkbox_show_construction"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:text="@string/show_construction" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="2"
        android:shrinkColumns="0,1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:animateLayoutChanges="true"
        android:layout_alignParentBottom="true" >

        <TableRow android:id="@+id/resolution_seekbar">
            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp"
                android:text="@string/resolution"
                android:textAlignment="center"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/textview_resolution"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical" />

            <SeekBar
                android:id="@+id/seekbar_resolution"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_vertical"
                android:max="100"
                android:progress="1" />
        </TableRow>

        <TableRow  android:id="@+id/t_seekbar">
            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp"
                android:text="@string/t"
                android:textStyle="italic"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/textview_t"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"/>

            <SeekBar
                android:id="@+id/seekbar_t"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_vertical"
                android:max="100"
                android:progress="1" />
        </TableRow>
    </TableLayout>

    <!--<de.peterloos.beziersplines.views.BezierView-->
        <!--android:id="@+id/bezier_view"-->
        <!--android:background="#ffe9e9e9"-->
        <!--android:paddingBottom="40dp"-->
        <!--android:paddingLeft="20dp"-->
        <!--android:paddingRight="20dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_above="@id/footer"-->
        <!--android:layout_below="@id/header" />-->

    <de.peterloos.beziersplines.views.BezierGridView
        android:id="@+id/bezier_view"
        android:background="@color/material_blue_grey_200"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header" />

</RelativeLayout>
